--- a/src/assets/sass/critical.scss
+++ b/src/assets/sass/critical.scss
@@ -5,14 +5,12 @@
 <--- -------------------------- -*/
 
 /* Mobile - 360px */
-@media only screen and (min-width: 0em) {
-    #hero {
-        font-family: "Roboto", "Arial", sans-serif;
+@media only screen and (min-width: 0rem) {
+    #hero-229 {
         /* Centers button */
         text-align: center;
         /* changes on tablet */
         padding: 0 calc(16 / 16 * 1rem);
-        padding-bottom: calc(100 / 16 * 1rem);
         position: relative;
         z-index: 1;
         /* prevents overflow from the lines extending past the screen width */
@@ -34,9 +32,9 @@
                 width: 100%;
                 height: 100%;
                 background: #000;
-                opacity: 0.7;
-                display: block;
+                opacity: 0.6;
                 position: absolute;
+                display: block;
                 top: 0;
                 left: 0;
                 z-index: 1;
@@ -45,24 +43,24 @@
             }
 
             img {
-                width: 100%;
-                height: 100%;
-                /* Makes image act like a background-image */
-                object-fit: cover;
                 position: absolute;
                 top: 0;
                 left: 0;
+                height: 100%;
+                width: 100%;
+                /* Makes image act like a background-image */
+                object-fit: cover;
             }
         }
 
         .cs-container {
             width: 100%;
-            max-width: calc(1280 / 16 * 1em);
-            margin: auto;
+            max-width: calc(1280 / 16 * 1rem);
             /* we put the padding top and bottom on the container instead of #Hero so the pseudo element lines go to the top and bottom of the section */
             /* 144px - 280px - leaving extra space for the navigation */
             /* changes on tablet */
-            padding: clamp(9em, 25.95vw, 17.5em) 0;
+            padding: clamp(9rem, 25.95vw, 17.5rem) 0;
+            margin: auto;
             position: relative;
 
             &:before {
@@ -81,41 +79,60 @@
                     rgba(250, 251, 252, 0) 100%
                 ); /* Chrome10-25,Safari5.1-6 */
                 opacity: 1;
-                display: block;
                 position: absolute;
+                display: block;
                 top: 0;
                 left: 0;
             }
         }
 
         .cs-flex-group {
+            /* 60px - 220px */
+            margin-bottom: clamp(3.75rem, 15.5vw, 13.75rem);
+            margin: auto;
             width: 80vw;
             /* 464px - 562px */
-            max-width: clamp(29em, 60vw, 35.125em);
-            margin: auto;
-            /* 60px - 220px */
-            margin-bottom: clamp(3.75em, 15.5vw, 13.75em);
-            box-sizing: border-box;
+            max-width: clamp(29rem, 60vw, 35.125rem);
             display: flex;
-            justify-content: center;
             align-items: flex-start;
+            justify-content: center;
             flex-wrap: wrap;
+            column-gap: calc(20 / 16 * 1rem);
+            box-sizing: border-box;
         }
 
         .cs-topper {
+            /* 13px - 16px */
+            font-size: clamp(0.8125rem, 1.6vw, 1rem);
+            line-height: 1.2em;
+            text-transform: uppercase;
             text-align: center;
+            letter-spacing: 0.1rem;
+            font-weight: 700;
+            color: var(--primaryLight);
             margin-bottom: calc(16 / 16 * 1rem);
-            color: var(--primary);
+            display: block;
         }
 
         .cs-title {
+            /* 39px - 61px */
+           
+            font-weight: 900;
+            line-height: 1.2em;
             text-align: center;
             width: 100%;
+            /* 32px - 40px */
+            margin: 0 auto clamp(2rem, 4vw, 2.5rem) 0;
             color: var(--bodyTextColorWhite);
+            position: relative;
         }
 
         .cs-text {
+            /* 16px - 20px */
+            font-size: clamp(1rem, 1.95vw, 1.25rem);
+            line-height: 1.5em;
             text-align: center;
+            width: 100%;
             /* 32px - 40px */
             margin: 0 auto clamp(2rem, 4vw, 2.5rem) 0;
             /* 40px - 48px */
@@ -124,26 +141,56 @@
         }
 
         .cs-button-solid {
-            line-height: clamp(2.875em, 5.5vw, 3.5em);
-            height: initial;
-            margin-bottom: calc(16 / 16 * 1rem);
+            font-size: calc(16 / 16 * 1rem);
+            /* 46px - 56px */
+            line-height: clamp(2.875rem, 5.5vw, 3.5rem);
+            width: calc(180 / 16 * 1rem);
+            text-decoration: none;
+            font-weight: 700;
+            margin: 0 0 calc(16 / 16 * 1rem) 0;
+            color: #fff;
+            padding: 0;
+            background-color: var(--primary);
+            display: inline-block;
+            position: relative;
+            z-index: 1;
+
+            &:before {
+                content: "";
+                position: absolute;
+                display: block;
+                height: 100%;
+                width: 0%;
+                background: #000;
+                opacity: 1;
+                top: 0;
+                left: 0;
+                z-index: -1;
+                transition: width 0.3s;
+            }
+
+            &:hover {
+                &:before {
+                    width: 100%;
+                }
+            }
         }
 
         .cs-button-transparent {
             font-size: calc(16 / 16 * 1rem);
-            font-weight: 700;
             /* 46px - 56px */
-            line-height: clamp(2.875em, 5.5vw, 3.5em);
-            text-decoration: none;
+            line-height: clamp(2.875rem, 5.5vw, 3.5rem);
             width: calc(180 / 16 * 1rem);
             /* 46px - 56px */
-            height: clamp(2.875em, 5.5vw, 3.5em);
-            margin: 0 calc(8 / 16 * 1rem);
-            box-sizing: border-box;
-            padding: 0;
+            height: clamp(2.875rem, 5.5vw, 3.5rem);
+            text-decoration: none;
+            font-weight: 700;
+            margin: 0;
             color: #fff;
+            padding: 0;
             background-color: transparent;
             border: 1px solid var(--bodyTextColorWhite);
+            box-sizing: border-box;
             display: inline-flex;
             justify-content: center;
             align-items: center;
@@ -152,20 +199,20 @@
 
             &:before {
                 content: "";
+                position: absolute;
+                display: block;
                 background: #000;
                 opacity: 1;
-                display: block;
-                position: absolute;
                 /* so it sits on top of the border */
                 top: -1px;
+                left: -1px;
                 right: -1px;
                 bottom: -1px;
-                left: -1px;
                 z-index: -1;
+                transform-origin: left;
                 /* this is what creates the grow affect on hover */
                 transform: scaleX(0);
                 transition: transform 0.3s;
-                transform-origin: left;
             }
 
             &:hover {
@@ -175,21 +222,20 @@
             }
 
             .cs-img {
-                margin-right: calc(12 / 16 * 1rem);
                 display: block;
+                margin-right: calc(12 / 16 * 1rem);
             }
         }
     }
 }
 
 /* Tablet - 768px */
-@media only screen and (min-width: 48em) {
-    #hero {
+@media only screen and (min-width: 48rem) {
+    #hero-229 {
         /* 32px - 40px */
-        padding: 0 clamp(2em, 5vw, 2.5em);
+        padding: 0 clamp(2rem, 5vw, 2.5rem);
 
         .cs-container {
-            padding: clamp(7em, 27.95vw, 17.5em) 0 clamp(9em, 30.95vw, 23.5em) 0;
             &:after {
                 /* Right Line */
                 content: "";
@@ -206,149 +252,35 @@
                     rgba(250, 251, 252, 0.5) 100%
                 ); /* Chrome10-25,Safari5.1-6 */
                 opacity: 1;
-                display: block;
                 position: absolute;
+                display: block;
                 top: 0;
                 right: 0;
             }
         }
 
         .cs-button-solid {
-            margin-right: calc(20 / 16 * 1rem);
             margin-bottom: 0;
         }
     }
 }
 
 /* Desktop Parallax Effect - 1300px */
-@media only screen and (min-width: 81.25em) {
-    #hero {
-        background: url("/assets/images/landing.jpg");
-        background-position: center;
+@media only screen and (min-width: 81.25rem) {
+    #hero-229 {
+        background: url("/assets/images/home.jpg");
         background-size: cover;
+        background-position: center;
         background-repeat: no-repeat;
         /* creates parallax effect on background image */
         background-attachment: fixed;
-    }
-}
-
-/* Dark Mode */
-@media only screen and (min-width: 0em) {
-    body.dark-mode {
-        #hero {
-            .cs-background {
-                &:before {
-                    opacity: 0.8;
-                }
+        /* remove img tag so we can make parallax work */
+        .cs-picture {
+            img {
+                display: none;
             }
         }
     }
 }
 
-/*-- -------------------------- -->
-<---          Services          -->
-<--- -------------------------- -*/
-
-/* Mobile */
-@media only screen and (min-width: 0em) {
-    .services {
-        width: 90%;
-        max-width: calc(1320 / 16 * 1em);
-        margin: auto;
-        margin-top: calc(-167 / 16 * 1em);
-        margin-bottom: calc(50 / 16 * 1em);
-        padding: calc(50 / 16 * 1em) calc(20 / 16 * 1em);
-        background: #fff;
-        box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.05);
-        border-top: calc(6 / 16 * 1em) solid var(--primary);
-        border-radius: calc(5 / 16 * 1em);
-        position: relative;
-        z-index: 100;
-        .card {
-            width: 100%;
-            max-width: calc(357 / 16 * 1em);
-            margin: auto;
-            margin-bottom: calc(50 / 16 * 1em);
-            display: block;
-            &:last-of-type {
-                margin-bottom: 0;
-            }
-
-            picture {
-                width: calc(88 / 16 * 1em);
-                height: calc(88 / 16 * 1em);
-                margin: auto;
-                margin-bottom: calc(23 / 16 * 1em);
-                background: var(--primary);
-                border-radius: 50%;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-
-                img {
-                    width: calc(48 / 16 * 1em);
-                    height: calc(48 / 16 * 1em);
-                }
-            }
-            h2 {
-                font-size: calc(32 / 16 * 1em);
-                font-weight: 700;
-                line-height: calc(27 / 20 * 1em);
-                text-align: center;
-                margin-bottom: calc(13 / 20 * 1em);
-                color: #1a1a1a;
-            }
-            p {
-                line-height: calc(24 / 18 * 1em);
-                text-align: center;
-                width: 100%;
-                opacity: 0.7;
-            }
-        }
-    }
-}
-
-/* Inbetween */
-@media only screen and (min-width: 768px) {
-    .services {
-        font-size: min(1.8vw, 1em);
-        width: 98%;
-        display: flex;
-        justify-content: space-between;
-        align-items: flex-start;
-
-        .card {
-            max-width: calc(325 / 16 * 1em);
-            margin: 0;
-        }
-    }
-}
-
-/* Large Desktop */
-@media only screen and (min-width: 1300px) {
-    .services {
-        padding: calc(50 / 16 * 1em) calc(80 / 16 * 1em);
-
-        .card {
-            max-width: calc(357 / 16 * 1em);
-        }
-    }
-}
-
-/* Dark mode */
-@media only screen and (min-width: 0em) {
-    body.dark-mode {
-        #services {
-            background: var(--medium);
-
-            picture {
-                background: var(--primaryDark);
-            }
-
-            h2 {
-                font-weight: bold;
-                color: #fff;
-            }
-        }
-    }
-}
+                                
