--- a/src/_includes/components/header.html
+++ b/src/_includes/components/header.html
@@ -5,19 +5,18 @@
 <header id="cs-navigation">
     <div class="cs-top-bar">
         <div class="cs-top-container">
-    
-            <div class="cs-top-contact">
-                <a href="" class="cs-top-link">
+            <div class="cs-top-social">
+                 <a href="" class="cs-top-link">
                     <img class="cs-link-icon" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/charity-pin-green.svg" alt="logo" width="16" height="16" aria-hidden="true" decoding="async">
-                    Servicing the Florida Region
+                    <b> Counties we serve:</b> Sarasota, Charlotte
                 </a>
-                <a href="" class="cs-top-link">
-                    <img class="cs-link-icon" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/charity-phone-green.svg" alt="logo" width="16" height="16" aria-hidden="true" decoding="async">
-                    (941) 564-7856
-                </a>
+            </div>
+            <div class="cs-top-contact">
+               
+             
                 <a href="" class="cs-top-link">
                     <img class="cs-link-icon" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/charity-clock-green.svg" alt="logo" width="20" height="20" aria-hidden="true" decoding="async">
-                    M-F: 8:00am - 9:00pm
+                    Call for free consultation <b>(941) 564-7856 </b>
                 </a>
             </div>
         </div>
@@ -25,7 +24,7 @@
     <div class="cs-container">
         <!--Nav Logo-->
         <a href="" class="cs-logo" aria-label="back to home">
-            <img src="/assets/images/Logo.png" alt="logo" width="197" height="43" aria-hidden="true" decoding="async">
+            <img src="assets/images/logo.png" alt="logo" width="197" height="43" aria-hidden="true" decoding="async">
         </a>
         <!--Navigation List-->
         <nav class="cs-nav" role="navigation">
@@ -47,34 +46,33 @@
                     </li>
                     <li class="cs-li">
                         <a href="" class="cs-li-link">
-                            About
+                            About Us
                         </a>
                     </li>
                     <!--Copy and paste this cs-dropdown list item and replace any .cs-li with this cs-dropdown group to make a new dropdown and it will work-->
                     <li class="cs-li cs-dropdown" tabindex="0">
                         <span class="cs-li-link">
-                            Services
+                           Gutter Services
                             <img class="cs-drop-icon" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/down-green.svg" alt="dropdown icon" width="15" height="15" decoding="async" aria-hidden="true">
                         </span>
                         <ul class="cs-drop-ul">
                             <li class="cs-drop-li">
-                                <a href="" class="cs-li-link cs-drop-link">Seamless Gutter Installation</a>
+                                <a href="" class="cs-li-link cs-drop-link"></a>
                             </li>
                             <li class="cs-drop-li">
-                                <a href="" class="cs-li-link cs-drop-link">Gutter Cleaning</a>
+                                <a href="" class="cs-li-link cs-drop-link"></a>
                             </li>
                         </ul>
                     </li>
                     <li class="cs-li">
                         <a href="" class="cs-li-link">
-                            Contact Us
+                            Contact
                         </a>
                     </li>
                 </ul>
             </div>
         </nav>
-
-        <a href="" class="cs-button-solid cs-nav-button">Booking</a>
+        <a href="" class="cs-button-solid cs-nav-button">Book Now</a>
         <!--Dark Mode toggle, uncomment button code if you want to enable a dark mode toggle-->
         <!-- <button id="dark-mode-toggle" aria-label="dark mode toggle">
             <svg class="cs-moon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 480 480" style="enable-background:new 0 0 480 480" xml:space="preserve"><path d="M459.782 347.328c-4.288-5.28-11.488-7.232-17.824-4.96-17.76 6.368-37.024 9.632-57.312 9.632-97.056 0-176-78.976-176-176 0-58.4 28.832-112.768 77.12-145.472 5.472-3.712 8.096-10.4 6.624-16.832S285.638 2.4 279.078 1.44C271.59.352 264.134 0 256.646 0c-132.352 0-240 107.648-240 240s107.648 240 240 240c84 0 160.416-42.688 204.352-114.176 3.552-5.792 3.04-13.184-1.216-18.496z"/></svg>
