--- a/src/assets/css/root.css
+++ b/src/assets/css/root.css
@@ -306,35 +306,6 @@ html {
     transform: translateY(0);
     opacity: 1;
   }
-  #cs-navigation .cs-top-bar {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  #cs-navigation .cs-top-container {
-    width: 100%;
-    padding: 1rem 1rem 0;
-    /* prevents padding and border from affecting height and width */
-    box-sizing: border-box;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    gap: 1rem;
-  }
-  #cs-navigation .cs-top-contact {
-    width: 100%;
-    padding-bottom: 1rem;
-    /* prevents padding and border from affecting height and width */
-    box-sizing: border-box;
-    border-bottom: 1px solid #e8e8e8;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    /* 16px - 20px */
-    gap: clamp(1rem, 2vw, 1.5rem);
-  }
   #cs-navigation .cs-top-link {
     font-size: 0.875rem;
     line-height: 1.5em;
@@ -422,7 +393,7 @@ html {
   }
   #cs-navigation .cs-logo img {
     width: auto;
-    height: 100%;
+    height: 200%;
     /* ensures the image never overflows the container. It stays contained within it's width and height and expands to fill it then stops once it reaches an edge */
     object-fit: contain;
   }
@@ -832,6 +803,7 @@ html {
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: #f7f7f7;
   }
   #cs-navigation .cs-top-container {
     width: 100%;
@@ -840,7 +812,7 @@ html {
     /* prevents padding and border from affecting height and width */
     box-sizing: border-box;
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
     align-items: center;
     gap: 3.125rem;
   }
@@ -939,8 +911,8 @@ html {
     z-index: 100;
   }
   #cs-navigation .cs-logo img {
-    width: 100%;
-    height: 100%;
+    width: 150%;
+    height: 150%;
     /* ensures the image never overflows the container. It stays contained within it's width and height and expands to fill it then stops once it reaches an edge */
     object-fit: contain;
   }
@@ -1207,6 +1179,7 @@ html {
     align-items: flex-start;
     grid-column: span 12;
     gap: 0.25rem;
+    margin-bottom: 25px;
   }
   #contact-1525 .cs-input, #contact-1525 .cs-select {
     font-size: 1rem;
