--- a/src/_includes/components/header.html
+++ b/src/_includes/components/header.html
@@ -23,8 +23,8 @@
     </div>
     <div class="cs-container">
         <!--Nav Logo-->
-        <a href="" class="cs-logo" aria-label="back to home">
-            <img src="assets/images/logo.png" alt="logo" width="197" height="43" aria-hidden="true" decoding="async">
+        <a href="/" class="cs-logo" aria-label="back to home">
+            <img src="/assets/images/Logo.png" alt="logo" width="197" height="43" aria-hidden="true" decoding="async">
         </a>
         <!--Navigation List-->
         <nav class="cs-nav" role="navigation">
@@ -40,39 +40,58 @@
             <div class="cs-ul-wrapper">
                 <ul id="cs-expanded" class="cs-ul" aria-expanded="false">
                     <li class="cs-li">
-                        <a href="" class="cs-li-link cs-active">
+                        <a href="/" class="cs-li-link">
                             Home
                         </a>
                     </li>
                     <li class="cs-li">
-                        <a href="" class="cs-li-link">
+                        <a href="" class="cs-li-link {{ 'cs-active' if 'about' == page.fileSlug}}">
                             About Us
                         </a>
                     </li>
                     <!--Copy and paste this cs-dropdown list item and replace any .cs-li with this cs-dropdown group to make a new dropdown and it will work-->
                     <li class="cs-li cs-dropdown" tabindex="0">
-                        <span class="cs-li-link">
+                        <span class="cs-li-link   
+                          {{ 'cs-active' if 'Seamless-Gutter-Systems' == page.fileSlug}}
+                            {{ 'cs-active' if 'Gutter-Cleaning' == page.fileSlug}}
+                            {{ 'cs-active' if 'Gutter-Repair' == page.fileSlug}}
+                            {{ 'cs-active' if 'Gutter-Guards' == page.fileSlug}}
+                            {{ 'cs-active' if 'Soffit-Installation' == page.fileSlug}}
+                            {{ 'cs-active' if 'Soffit-Repair' == page.fileSlug}}">
                            Gutter Services
                             <img class="cs-drop-icon" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/down-green.svg" alt="dropdown icon" width="15" height="15" decoding="async" aria-hidden="true">
                         </span>
                         <ul class="cs-drop-ul">
                             <li class="cs-drop-li">
-                                <a href="" class="cs-li-link cs-drop-link"></a>
+                                <a href="/Seamless-Gutter-Systems" class="cs-li-link cs-drop-link"> Seamless Gutter Systems </a>
                             </li>
                             <li class="cs-drop-li">
-                                <a href="" class="cs-li-link cs-drop-link"></a>
+                                <a href="/Gutter-Cleaning" class="cs-li-link cs-drop-link">Gutter Cleaning</a>
+                            </li>
+                                     <li class="cs-drop-li">
+                                <a href="/Gutter-Repair" class="cs-li-link cs-drop-link">Gutter Repair</a>
+                            </li>
+                              </li>
+                                     <li class="cs-drop-li">
+                                <a href="/Gutter-Guards" class="cs-li-link cs-drop-link">Gutter Guards</a>
+                            </li>
+                                        <li class="cs-drop-li">
+                                <a href="/Soffit-Installation" class="cs-li-link cs-drop-link">Soffit Installation</a>
+                            </li>
+                                        <li class="cs-drop-li">
+                                <a href="/Soffit-Repair" class="cs-li-link cs-drop-link">Soffit Repair</a>
                             </li>
                         </ul>
                     </li>
                     <li class="cs-li">
-                        <a href="" class="cs-li-link">
+                        <a href="/contact" class="cs-li-link {{ 'cs-active' if 'about' == page.fileSlug}}">
                             Contact
                         </a>
                     </li>
                 </ul>
             </div>
         </nav>
-        <a href="" class="cs-button-solid cs-nav-button">Book Now</a>
+        <a href="/contact" class="cs-button-solid cs-nav-button">Book Now</a>
         <!--Dark Mode toggle, uncomment button code if you want to enable a dark mode toggle-->
         <!-- <button id="dark-mode-toggle" aria-label="dark mode toggle">
             <svg class="cs-moon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 480 480" style="enable-background:new 0 0 480 480" xml:space="preserve"><path d="M459.782 347.328c-4.288-5.28-11.488-7.232-17.824-4.96-17.76 6.368-37.024 9.632-57.312 9.632-97.056 0-176-78.976-176-176 0-58.4 28.832-112.768 77.12-145.472 5.472-3.712 8.096-10.4 6.624-16.832S285.638 2.4 279.078 1.44C271.59.352 264.134 0 256.646 0c-132.352 0-240 107.648-240 240s107.648 240 240 240c84 0 160.416-42.688 204.352-114.176 3.552-5.792 3.04-13.184-1.216-18.496z"/></svg>
