--- a/src/assets/css/contact.css
+++ b/src/assets/css/contact.css
@@ -3,266 +3,189 @@
 <---          Contact           -->
 <--- -------------------------- -*/
 /* Mobile - 360px */
-@media only screen and (min-width: 0em) {
-  :root {
-    /* 13px - 16px */
-    --topperFontSize: clamp(0.8125rem, 1.6vw, 1rem);
-    /* 31px - 49px */
-    --headerFontSize: clamp(1.9375rem, 4.5vw, 3.0625rem);
-    --bodyFontSize: 1rem;
-    /* 60px - 100px top and bottom */
-    --sectionPadding: clamp(3.75em, 7.82vw, 6.25em) 1rem;
-  }
-  #cs-contact {
-    font-family: "Roboto", "Arial", sans-serif;
+@media only screen and (min-width: 0rem) {
+  #contact-1525 {
+    background-color: #f5f4f2;
     padding: var(--sectionPadding);
+    margin-top: 100px;
+    position: relative;
+    z-index: 1;
   }
-  #cs-contact .cs-container {
+  #contact-1525 .cs-container {
     width: 100%;
-    /* changes to 1280px at desktop */
-    max-width: 50rem;
+    max-width: 80rem;
     margin: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    /* 48px - 64px */
+    gap: clamp(3rem, 6vw, 4rem);
   }
-  #cs-contact .cs-content {
+  #contact-1525 .cs-content {
+    /* set text aling to left if content needs to be left aligned */
+    text-align: center;
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    /* centers content horizontally, set to flex-start to left align */
+    align-items: center;
   }
-  #cs-contact .cs-topper {
-    text-align: left;
-    /* 8px - 12px */
-    margin-bottom: clamp(0.5rem, 1.4vw, 0.75rem);
+  #contact-1525 .cs-title {
+    margin: 0;
   }
-  #cs-contact .cs-title {
-    text-align: left;
-    max-width: 50rem;
+  #contact-1525 .cs-form {
+    width: 100%;
+    max-width: 52.875rem;
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    gap: 0.75rem;
   }
-  #cs-contact .cs-text {
-    text-align: left;
-    /* 404px - 522px */
-    max-width: clamp(25.25rem, 30vw, 32.625rem);
-    margin: 0 auto 0 0;
-    /* 40px - 48px */
-    margin-bottom: clamp(2.5rem, 6.3vw, 3rem);
-  }
-  #cs-contact #cs-form {
-    margin-bottom: 2.5rem;
-  }
-  #cs-contact #cs-form label {
-    font-size: 1rem;
-    font-weight: 700;
-    line-height: 1.5em;
-    /* 12px - 20px */
-    margin-bottom: clamp(0.75rem, 1.3em, 1.25rem);
+  #contact-1525 .cs-label {
+    /* 14px - 16px */
+    font-size: clamp(0.875rem, 1.5vw, 1rem);
+    width: 100%;
     color: var(--headerColor);
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
+    grid-column: span 12;
+    gap: 0.25rem;
   }
-  #cs-contact #cs-form .cs-label-message {
-    /* 32px - 48px */
-    margin-bottom: clamp(2rem, 6.3vw, 3rem);
-  }
-  #cs-contact #cs-form input,
-  #cs-contact #cs-form textarea {
+  #contact-1525 .cs-input, #contact-1525 .cs-select {
     font-size: 1rem;
     width: 100%;
-    height: 4rem;
-    margin-top: 0.25rem;
-    /* prevents border & padding from affecting height */
+    height: 3.5rem;
+    padding: 0;
+    padding: 0 1.5rem;
+    color: var(--headerColor);
+    background-color: #fff;
+    border-color: #000;
+    /* prevents padding from adding to height and width */
     box-sizing: border-box;
-    padding-left: 1.25rem;
-    border: 1px solid #b4b2c7;
-    border-radius: 0.5rem;
-    transition: border 0.3s;
+    transition: border-color 0.3s;
   }
-  #cs-contact #cs-form input:hover,
-  #cs-contact #cs-form textarea:hover {
-    border: 1px solid var(--primary);
+  #contact-1525 .cs-input:hover, #contact-1525 .cs-select:hover {
+    border-color: var(--secondary);
   }
-  #cs-contact #cs-form textarea {
+  #contact-1525 .cs-input:focus, #contact-1525 .cs-select:focus {
+    outline: 1px solid var(--secondary);
+  }
+  #contact-1525 .cs-input::placeholder, #contact-1525 .cs-select::placeholder {
+    color: #7d799c;
+    opacity: 0.6;
+  }
+  #contact-1525 .cs-textarea {
+    /* 120px - 192px */
+    min-height: clamp(7.5rem, 28vw, 12rem);
+    padding-top: 1.5rem;
+    /* 48px - 64px */
+    margin-bottom: clamp(3rem, 6vw, 4rem);
     font-family: inherit;
-    min-height: 7.5rem;
-    padding-top: 1.25rem;
   }
-  #cs-contact #cs-form .cs-button-solid {
-    width: 100%;
-    border: none;
-  }
-  #cs-contact .cs-right-section {
-    height: 20rem;
-    /* 24px - 40px top & bottom */
-    /* 20px - 40px left & right */
-    padding: clamp(1.5rem, 3vw, 2.5rem) clamp(1.25rem, 3vw, 2.5rem);
-    border-radius: 0.5rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    align-items: flex-start;
-    position: relative;
-    /* cuts off corners on img tag */
-    overflow: hidden;
-  }
-  #cs-contact .cs-header {
-    /* 16px - 20px */
-    font-size: clamp(1rem, 3vw, 1.25rem);
-    font-weight: 700;
-    line-height: 1.2em;
-    margin-bottom: 0.5rem;
-    color: var(--bodyTextColorWhite);
-    display: block;
-  }
-  #cs-contact .cs-link {
-    /* 16px - 20px */
-    font-size: clamp(1rem, 3vw, 1.25rem);
-    line-height: 1.2em;
+  #contact-1525 .cs-button-solid {
+    font-size: 1rem;
+    /* 46px - 56px */
+    line-height: clamp(2.875rem, 3.5vw, 3.5rem);
     text-decoration: none;
-    margin-bottom: 1.25rem;
-    color: var(--bodyTextColorWhite);
-    display: block;
+    font-weight: 700;
+    text-align: center;
+    margin: 0 auto;
+    color: #fff;
+    min-width: 9.375rem;
+    padding: 0 1.5rem;
+    background-color: var(--primary);
+    border-radius: 3.125rem;
+    overflow: hidden;
+    display: inline-block;
     position: relative;
+    z-index: 1;
+    /* prevents padding from adding to the width */
+    box-sizing: border-box;
   }
-  #cs-contact .cs-link:before {
-    /* Animated underline */
+  #contact-1525 .cs-button-solid:before {
     content: "";
-    width: 0%;
-    height: 2px;
-    /* current color of the parent */
-    background: currentColor;
-    opacity: 1;
-    display: block;
     position: absolute;
-    bottom: -0.125rem;
-    left: 0;
-    transition: width 0.3s;
-  }
-  #cs-contact .cs-link:hover:before {
-    width: 100%;
-  }
-  #cs-contact .cs-link:last-of-type {
-    margin-bottom: 0;
-  }
-  #cs-contact .cs-block {
-    /* sends second address line to the bottom on its own line */
-    display: block;
-  }
-  #cs-contact .cs-bg-picture {
-    width: 100%;
     height: 100%;
-    display: block;
-    position: absolute;
+    width: 0%;
+    background: #000;
+    opacity: 1;
     top: 0;
     left: 0;
     z-index: -1;
-    transition: transform 0.6s;
+    border-radius: 0.25rem;
+    transition: width 0.3s;
   }
-  #cs-contact .cs-bg-picture:before {
-    /* background color overlay */
-    content: "";
+  #contact-1525 .cs-button-solid:hover:before {
+    width: 100%;
+  }
+  #contact-1525 .cs-submit {
+    text-transform: uppercase;
+    min-width: 13.375rem;
+    margin-top: -0.75rem;
+    border: none;
+    grid-column: span 12;
+  }
+  #contact-1525 .cs-submit:hover {
+    cursor: pointer;
+  }
+  #contact-1525 .cs-floater1 {
+    /* 157px - 312px */
+    width: clamp(9.8125rem, 20vw, 19.5rem);
+    height: auto;
+    position: absolute;
+    top: -2rem;
+    left: -4rem;
+    z-index: -1;
+    transform: rotate(-10deg);
+  }
+  #contact-1525 .cs-floater2 {
+    /* 72px - 200px */
+    width: clamp(4.5rem, 15vw, 12.5rem);
+    height: auto;
+    position: absolute;
+    bottom: 12.5rem;
+    right: -2.75rem;
+    z-index: -1;
+    transform: rotate(-10deg);
+  }
+  #contact-1525 .cs-background {
     width: 100%;
     height: 100%;
-    background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.8) 100%);
     display: block;
     position: absolute;
     top: 0;
     left: 0;
-    z-index: 1;
+    z-index: -2;
   }
-  #cs-contact .cs-bg-picture img {
-    width: 100%;
-    height: 100%;
-    /* Makes img tag act as a background image */
-    object-fit: cover;
+  #contact-1525 .cs-background img {
     position: absolute;
     top: 0;
     left: 0;
-  }
-}
-/* Tablet - 700px */
-@media only screen and (min-width: 43.75em) {
-  #cs-contact #cs-form {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    flex-wrap: wrap;
-  }
-  #cs-contact #cs-form label {
-    width: 48%;
-  }
-  #cs-contact #cs-form .cs-label-message {
+    height: 100%;
     width: 100%;
+    /* Makes img tag act as a background image */
+    object-fit: cover;
   }
 }
-/* Small Desktop - 1024px */
-@media only screen and (min-width: 64em) {
-  #cs-contact .cs-container {
-    max-width: 80rem;
-    display: flex;
-    justify-content: flex-end;
-    align-items: flex-start;
-    gap: 5rem;
+/* Tablet - 768px */
+@media only screen and (min-width: 48rem) {
+  #contact-1525 {
+    padding: var(--sectionPadding);
+    position: relative;
   }
-  #cs-contact #cs-form {
-    max-width: 39.375rem;
+  #contact-1525 .cs-label {
+    grid-column: span 6;
   }
-  #cs-contact #cs-form label {
-    width: 100%;
-  }
-  #cs-contact .cs-right-section {
-    width: 40%;
-    max-width: 33.875rem;
-    /* changes to 578px at 1300px wide */
-    height: 42.875rem;
-    /* prevents flexbox from squishing it */
-    flex: none;
-  }
-  #cs-contact .cs-right-section:hover .cs-bg-picture {
-    transform: scale(1.1);
-  }
-  #cs-contact .cs-block {
-    /* goes back to inline so it stays "in line" with the rest of the text */
-    display: inline-block;
+  #contact-1525 .cs-message {
+    grid-column: span 12;
   }
 }
-/* Small Desktop - 1300px */
-@media only screen and (min-width: 81.25em) {
-  #cs-contact #cs-form {
-    column-gap: 0rem;
-  }
-  #cs-contact #cs-form label {
-    width: 48%;
-    max-width: 19.0625rem;
-  }
-  #cs-contact #cs-form .cs-label-message {
-    max-width: 100%;
-  }
-  #cs-contact .cs-right-section {
-    height: 36.125rem;
-  }
-}
-/* Dark Mode */
-@media only screen and (min-width: 0em) {
-  body.dark-mode #cs-contact .cs-text,
-  body.dark-mode #cs-contact .cs-title {
-    color: var(--bodyTextColorWhite);
-  }
-  body.dark-mode #cs-contact #cs-form label,
-  body.dark-mode #cs-contact #cs-form input,
-  body.dark-mode #cs-contact #cs-form textarea {
-    color: var(--bodyTextColorWhite);
-    background-color: transparent;
-  }
-  body.dark-mode #cs-contact #cs-form label::placeholder,
-  body.dark-mode #cs-contact #cs-form input::placeholder,
-  body.dark-mode #cs-contact #cs-form textarea::placeholder {
-    /* lighten up the color of the text by 40%*/
-    filter: brightness(1.4);
-  }
-  body.dark-mode #cs-contact .cs-bg-picture {
-    background-color: #000;
-  }
-  body.dark-mode #cs-contact .cs-bg-picture img {
-    /* lets parent background-color bleed through and darken it */
-    opacity: 0.5;
+/* Large Desktop - 1300px */
+@media only screen and (min-width: 81.25rem) {
+  #contact-1525 .cs-floater1 {
+    top: 11.25rem;
   }
 }
 
