--- a/src/assets/css/root2.css
+++ b/src/assets/css/root2.css
@@ -1129,111 +1129,266 @@ html {
   }
 }
 /*-- -------------------------- -->
-<---          Contact           -->
+<---          Footer            -->
 <--- -------------------------- -*/
 /* Mobile - 360px */
 @media only screen and (min-width: 0rem) {
-  #contact-1525 {
+  #cs-footer-266 {
     padding: var(--sectionPadding);
+    /* Navigation Links */
+    /* Contact Links */
+  }
+  #cs-footer-266 .cs-container {
+    width: 100%;
+    /* reset on tablet */
+    max-width: 34.375rem;
+    margin: auto;
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    /* 68px - 100px */
+    column-gap: clamp(4.25rem, 8% + 2vw, 6.25rem);
+  }
+  #cs-footer-266 .cs-logo-group {
+    /* takes up all the space, lets the other ul's wrap below it */
+    width: 100%;
+    position: relative;
+  }
+  #cs-footer-266 .cs-logo {
+    /* 210px - 240px */
+    width: clamp(13.125rem, 8vw, 15rem);
+    height: auto;
+    display: block;
+    /* 28px - 44px */
+    margin-bottom: clamp(1.75rem, 4.17vw, 2.75rem);
+  }
+  #cs-footer-266 .cs-logo-img {
+    width: 100%;
+    height: auto;
+  }
+  #cs-footer-266 .cs-logo-img.dark {
+    display: none;
+  }
+  #cs-footer-266 .cs-nav {
+    padding: 0;
+    margin: 0;
+  }
+  #cs-footer-266 .cs-nav-li {
+    list-style: none;
+    line-height: 1.5em;
+    margin-bottom: 0.5rem;
+  }
+  #cs-footer-266 .cs-nav-li:last-of-type {
+    margin-bottom: 0;
+  }
+  #cs-footer-266 .cs-header {
+    font-size: 1rem;
+    line-height: 1.5em;
+    font-weight: 700;
+    margin-bottom: 0.875rem;
+    color: var(--bodyTextColor);
+    position: relative;
+    display: block;
+  }
+  #cs-footer-266 .cs-nav-link {
+    font-size: 1rem;
+    text-decoration: none;
+    line-height: 1.5em;
+    color: var(--bodyTextColor);
+    position: relative;
+  }
+  #cs-footer-266 .cs-nav-link:before {
+    /* underline */
+    content: "";
+    width: 0%;
+    height: 0.125rem;
+    background: var(--bodyTextColor);
+    opacity: 1;
+    position: absolute;
+    display: block;
+    bottom: -0.125rem;
+    left: 0;
+    transition: width 0.3s;
+  }
+  #cs-footer-266 .cs-nav-link:hover:before {
+    width: 100%;
+  }
+  #cs-footer-266 .cs-contact {
+    margin: 0;
+    padding: 0;
+    width: auto;
+    display: flex;
+    flex-direction: column;
+    align-self: stretch;
+  }
+  #cs-footer-266 .cs-contact-li {
+    list-style: none;
+    margin-bottom: 0;
+  }
+  #cs-footer-266 .cs-contact-link {
+    font-size: 1rem;
+    text-decoration: none;
+    line-height: 1.5em;
+    text-align: left;
+    color: var(--bodyTextColor);
+    display: inline-block;
+  }
+  #cs-footer-266 .cs-contact-link:hover {
+    text-decoration: underline;
+  }
+  #cs-footer-266 .cs-address {
+    font-size: 1rem;
+    margin-bottom: 1.25rem;
+  }
+  #cs-footer-266 .cs-social-group {
+    /* pushes away from the other flex items */
+    margin-top: auto;
+    margin-left: auto;
+  }
+  #cs-footer-266 .cs-social {
+    display: inline-flex;
+    justify-content: flex-start;
+    gap: 0.75rem;
+  }
+  #cs-footer-266 .cs-social-link {
+    width: 1.5rem;
+    height: 1.5rem;
+    background-color: #4e4b66;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     position: relative;
     z-index: 1;
+    transition: transform 0.3s, background-color 0.3s;
   }
-  #contact-1525 .cs-container {
+  #cs-footer-266 .cs-social-link:hover {
+    background-color: var(--primary);
+    transform: translateY(-0.1875rem);
+  }
+  #cs-footer-266 .cs-social-img {
+    height: 0.8125rem;
+    width: auto;
+    display: block;
+  }
+}
+/* Tablet - 768px */
+@media only screen and (min-width: 48rem) {
+  #cs-footer-266 .cs-container {
+    max-width: 80rem;
+    row-gap: 0;
+  }
+  #cs-footer-266 .cs-logo-group {
+    width: auto;
+    /* pushes everything to the right of it as far as possible in a flexbox */
+    margin-right: auto;
+  }
+  #cs-footer-266 .cs-text {
+    width: 80%;
+    max-width: 19.0625rem;
+    margin: 0;
+  }
+  #cs-footer-266 .cs-nav,
+  #cs-footer-266 .cs-contact {
+    /* 8px - 12px */
+    margin-top: clamp(0.5rem, 1.2vw, 0.75rem);
+  }
+}
+/*-- -------------------------- -->
+<---            CTA             -->
+<--- -------------------------- -*/
+/* Mobile - 360px */
+@media only screen and (min-width: 0rem) {
+  #cta-403 {
+    padding: var(--sectionPadding);
+    position: relative;
+  }
+  #cta-403 .cs-background {
+    width: 100%;
+    height: 100%;
+    background-blend-mode: multiply;
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+  }
+  #cta-403 .cs-background:before {
+    /* background color overlay */
+    content: "";
+    position: absolute;
+    display: block;
+    height: 100%;
+    width: 100%;
+    background: #1a1a1a;
+    opacity: 0.8;
+    top: 0;
+    left: 0;
+    z-index: 1;
+  }
+  #cta-403 .cs-background img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    /* Makes img tag act as a background image */
+    object-fit: cover;
+    /* positions the image inside the parent */
+    object-position: 0% 30%;
+  }
+  #cta-403 .cs-container {
     width: 100%;
     max-width: 80rem;
     margin: auto;
     display: flex;
-    justify-content: center;
-    align-items: center;
     flex-direction: column;
+    align-items: center;
     /* 48px - 64px */
     gap: clamp(3rem, 6vw, 4rem);
   }
-  #contact-1525 .cs-content {
-    /* set text aling to left if content needs to be left aligned */
+  #cta-403 .cs-content {
+    /* set text align to left if content needs to be left aligned */
     text-align: center;
     width: 100%;
+    max-width: 32.3125rem;
     display: flex;
     flex-direction: column;
     /* centers content horizontally, set to flex-start to left align */
     align-items: center;
   }
-  #contact-1525 .cs-title {
-    margin: 0;
+  #cta-403 .cs-title,
+  #cta-403 .cs-text {
+    color: var(--bodyTextColorWhite);
   }
-  #contact-1525 .cs-form {
-    width: 100%;
-    max-width: 52.875rem;
-    display: grid;
-    grid-template-columns: repeat(12, 1fr);
-    gap: 0.75rem;
+  #cta-403 .cs-text {
+    opacity: 0.8;
+    margin-bottom: 40.625rem;
   }
-  #contact-1525 .cs-label {
-    /* 14px - 16px */
-    font-size: clamp(0.875rem, 1.5vw, 1rem);
-    width: 100%;
-    color: var(--headerColor);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-    grid-column: span 12;
-    gap: 0.25rem;
-    margin-bottom: 25px;
+  #cta-403 .cs-text:last-of-type {
+    margin-bottom: 2rem;
   }
-  #contact-1525 .cs-input, #contact-1525 .cs-select {
-    font-size: 1rem;
-    width: 100%;
-    height: 3.5rem;
-    padding: 0;
-    padding: 0 1.5rem;
-    color: var(--headerColor);
-    border-radius: 0.5rem;
-    background-color: #f7f7f7;
-    border: none;
-    /* prevents padding from adding to height and width */
-    box-sizing: border-box;
-    transition: border-color 0.3s;
-  }
-  #contact-1525 .cs-input:hover, #contact-1525 .cs-select:hover {
-    border-color: var(--secondary);
-  }
-  #contact-1525 .cs-input:focus, #contact-1525 .cs-select:focus {
-    outline: 1px solid var(--secondary);
-  }
-  #contact-1525 .cs-input::placeholder, #contact-1525 .cs-select::placeholder {
-    color: #7d799c;
-    opacity: 0.6;
-  }
-  #contact-1525 .cs-textarea {
-    /* 120px - 192px */
-    min-height: clamp(7.5rem, 28vw, 12rem);
-    padding-top: 1.5rem;
-    /* 48px - 64px */
-    margin-bottom: clamp(3rem, 6vw, 4rem);
-    font-family: inherit;
-  }
-  #contact-1525 .cs-button-solid {
+  #cta-403 .cs-button-solid {
     font-size: 1rem;
     /* 46px - 56px */
-    line-height: clamp(2.875rem, 3.5vw, 3.5rem);
+    line-height: clamp(2.875rem, 5.5vw, 3.5rem);
     text-decoration: none;
     font-weight: 700;
     text-align: center;
-    margin: 0 auto;
+    margin: 0;
     color: #fff;
     min-width: 9.375rem;
     padding: 0 1.5rem;
     background-color: var(--primary);
-    border-radius: 3.125rem;
-    overflow: hidden;
+    border-radius: 0.25rem;
     display: inline-block;
     position: relative;
     z-index: 1;
     /* prevents padding from adding to the width */
     box-sizing: border-box;
   }
-  #contact-1525 .cs-button-solid:before {
+  #cta-403 .cs-button-solid:before {
     content: "";
     position: absolute;
     height: 100%;
@@ -1246,246 +1401,55 @@ html {
     border-radius: 0.25rem;
     transition: width 0.3s;
   }
-  #contact-1525 .cs-button-solid:hover:before {
+  #cta-403 .cs-button-solid:hover:before {
     width: 100%;
-  }
-  #contact-1525 .cs-submit {
-    text-transform: uppercase;
-    min-width: 13.375rem;
-    margin-top: -0.75rem;
-    border: none;
-    grid-column: span 12;
-  }
-  #contact-1525 .cs-submit:hover {
-    cursor: pointer;
-  }
-  #contact-1525 .cs-floater1 {
-    /* 157px - 312px */
-    width: clamp(9.8125rem, 20vw, 19.5rem);
-    height: auto;
-    position: absolute;
-    top: -2rem;
-    left: -4rem;
-    z-index: -1;
-    transform: rotate(-10deg);
-  }
-  #contact-1525 .cs-floater2 {
-    /* 72px - 200px */
-    width: clamp(4.5rem, 15vw, 12.5rem);
-    height: auto;
-    position: absolute;
-    bottom: 12.5rem;
-    right: -2.75rem;
-    z-index: -1;
-    transform: rotate(-10deg);
-  }
-  #contact-1525 .cs-background {
-    width: 100%;
-    height: 100%;
-    display: block;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -2;
-  }
-  #contact-1525 .cs-background img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    /* Makes img tag act as a background image */
-    object-fit: cover;
   }
 }
 /* Tablet - 768px */
 @media only screen and (min-width: 48rem) {
-  #contact-1525 {
-    padding: var(--sectionPadding);
-    position: relative;
+  #cta-403 .cs-background {
+    /* clips the black slant so it doesnt overflow */
+    overflow: hidden;
   }
-  #contact-1525 .cs-label {
-    grid-column: span 6;
+  #cta-403 .cs-background:before {
+    width: 40%;
+    opacity: 1;
   }
-  #contact-1525 .cs-message {
-    grid-column: span 12;
-  }
-}
-/* Large Desktop - 1300px */
-@media only screen and (min-width: 81.25rem) {
-  #contact-1525 .cs-floater1 {
-    top: 11.25rem;
-  }
-}
-/*-- -------------------------- -->
-<---          Footer            -->
-<--- -------------------------- -*/
-/* Mobile - 360px */
-@media only screen and (min-width: 0rem) {
-  #cs-footer-269 {
-    /* 60px - 100px top and bottom */
-    padding: clamp(3.75em, 7.82vw, 6.25rem) 1rem;
-    background-color: #1a1a1a;
-    /* Navigation Links */
-    /* Contact Links */
-  }
-  #cs-footer-269 .cs-container {
-    width: 100%;
-    /* reset on tablet */
-    max-width: 34.375rem;
-    margin: auto;
-    display: flex;
-    justify-content: flex-start;
-    align-items: flex-start;
-    flex-wrap: wrap;
-    /* 68px - 100px */
-    column-gap: clamp(4.25em, 8% + 2vw, 6.25rem);
-  }
-  #cs-footer-269 .cs-logo-group {
-    /* takes up all the space, lets the other ul's wrap below it */
-    width: 100%;
-    position: relative;
-  }
-  #cs-footer-269 .cs-logo {
-    /* 210px - 240px */
-    width: clamp(13.125rem, 8vw, 15rem);
-    height: auto;
-    display: block;
-    /* 28px - 44px */
-    margin-bottom: clamp(1.75rem, 4.17vw, 2.75rem);
-  }
-  #cs-footer-269 .cs-logo-img {
-    width: 100%;
-    height: auto;
-  }
-  #cs-footer-269 .cs-nav {
-    padding: 0;
-    margin: 0;
-  }
-  #cs-footer-269 .cs-nav-li {
-    list-style: none;
-    line-height: 1.5em;
-    margin-bottom: 0.5rem;
-  }
-  #cs-footer-269 .cs-nav-li:last-of-type {
-    margin-bottom: 0;
-  }
-  #cs-footer-269 .cs-header {
-    font-size: 1rem;
-    line-height: 1.5em;
-    font-weight: 700;
-    margin-bottom: 0.875rem;
-    color: var(--bodyTextColorWhite);
-    position: relative;
-    display: block;
-  }
-  #cs-footer-269 .cs-nav-link {
-    font-size: 1rem;
-    text-decoration: none;
-    line-height: 1.5em;
-    color: var(--bodyTextColorWhite);
-    position: relative;
-  }
-  #cs-footer-269 .cs-nav-link:before {
-    /* underline */
+  #cta-403 .cs-background:after {
+    /* black slant */
     content: "";
-    width: 0%;
-    height: 0.125rem;
-    /* current color of the parent */
-    background: currentColor;
+    width: 31.25rem;
+    height: 93.75rem;
+    margin-right: -3.125rem;
+    background: -moz-linear-gradient(left, rgb(26, 26, 26) 0%, rgb(26, 26, 26) 57%, rgba(26, 26, 26, 0) 100%);
+    background: -webkit-linear-gradient(left, rgb(26, 26, 26) 0%, rgb(26, 26, 26) 57%, rgba(26, 26, 26, 0) 100%);
+    background: linear-gradient(to right, rgb(26, 26, 26) 0%, rgb(26, 26, 26) 57%, rgba(26, 26, 26, 0) 100%);
     opacity: 1;
     position: absolute;
     display: block;
-    bottom: -0.125rem;
-    left: 0;
-    transition: width 0.3s;
+    top: 50%;
+    right: 50%;
+    transform: rotate(10deg) translateY(-50%);
   }
-  #cs-footer-269 .cs-nav-link:hover:before {
-    width: 100%;
+  #cta-403 .cs-background img {
+    width: 60%;
+    object-position: right;
+    left: auto;
+    right: 0;
   }
-  #cs-footer-269 .cs-contact {
-    margin: 0;
-    padding: 0;
-    width: auto;
-    display: flex;
-    flex-direction: column;
-    align-self: stretch;
+  #cta-403 .cs-container {
+    flex-direction: row;
+    justify-content: space-between;
   }
-  #cs-footer-269 .cs-contact-li {
-    list-style: none;
-    margin-bottom: 0rem;
-  }
-  #cs-footer-269 .cs-contact-li:last-of-type {
-    margin-bottom: 0;
-  }
-  #cs-footer-269 .cs-contact-link {
-    font-size: 1rem;
-    text-decoration: none;
-    line-height: 1.5em;
+  #cta-403 .cs-content {
     text-align: left;
-    color: var(--bodyTextColorWhite);
-    display: inline-block;
+    align-items: flex-start;
+    width: 45%;
   }
-  #cs-footer-269 .cs-contact-link:hover {
-    text-decoration: underline;
-  }
-  #cs-footer-269 .cs-address {
-    font-size: 1rem;
-    margin-bottom: 1.25rem;
-  }
-  #cs-footer-269 .cs-social-group {
-    /* pushes away from the other flex items */
-    margin-top: auto;
-    margin-left: auto;
-  }
-  #cs-footer-269 .cs-social {
-    display: inline-flex;
-    justify-content: flex-start;
-    gap: 0.75rem;
-  }
-  #cs-footer-269 .cs-social-link {
-    width: 1.5rem;
-    height: 1.5rem;
-    background-color: #4e4b66;
-    border-radius: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    z-index: 1;
-    transition: transform 0.3s, background-color 0.3s;
-  }
-  #cs-footer-269 .cs-social-link:hover {
-    background-color: var(--primary);
-    transform: translateY(-0.1875rem);
-  }
-  #cs-footer-269 .cs-social-img {
-    height: 0.8125rem;
-    width: auto;
-    display: block;
-  }
-}
-/* Tablet - 768px */
-@media only screen and (min-width: 48rem) {
-  #cs-footer-269 .cs-container {
-    max-width: 80rem;
-    row-gap: 0;
-  }
-  #cs-footer-269 .cs-logo-group {
-    width: auto;
-    /* pushes everything to the right of it as far as possible in a flexbox */
-    margin-right: auto;
-  }
-  #cs-footer-269 .cs-text {
-    width: 80%;
-    max-width: 305/16rem;
-    margin: 0;
-  }
-  #cs-footer-269 .cs-nav,
-  #cs-footer-269 .cs-contact {
-    /* 8px - 12px */
-    margin-top: clamp(0.5rem, 1.2vw, 0.75rem);
+  #cta-403 .cs-text,
+  #cta-403 .cs-title {
+    margin-left: 0;
   }
 }
 
-/*# sourceMappingURL=root.css.map */
+/*# sourceMappingURL=root2.css.map */
