--- a/src/assets/sass/contact.scss
+++ b/src/assets/sass/contact.scss
@@ -5,150 +5,126 @@
 <--- -------------------------- -*/
 
 /* Mobile - 360px */
-@media only screen and (min-width: 0em) {
-    :root {
-        /* 13px - 16px */
-        --topperFontSize: clamp(0.8125rem, 1.6vw, 1rem);
-        /* 31px - 49px */
-        --headerFontSize: clamp(1.9375rem, 4.5vw, 3.0625rem);
-        --bodyFontSize: 1rem;
-
-        /* 60px - 100px top and bottom */
-        --sectionPadding: clamp(3.75em, 7.82vw, 6.25em) 1rem;
-    }
-
-    #cs-contact {
-        font-family: "Roboto", "Arial", sans-serif;
+@media only screen and (min-width: 0rem) {
+    #contact-1525 {
+        background-color: #f5f4f2;
         padding: var(--sectionPadding);
+        margin-top:100px;
+        position: relative;
+        z-index: 1;
 
         .cs-container {
             width: 100%;
-            /* changes to 1280px at desktop */
-            max-width: calc(800 / 16 * 1rem);
+            max-width: calc(1280 / 16 * 1rem);
             margin: auto;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            /* 48px - 64px */
+            gap: clamp(3rem, 6vw, 4rem);
         }
 
         .cs-content {
+            /* set text aling to left if content needs to be left aligned */
+            text-align: center;
             width: 100%;
-        }
-
-        .cs-topper {
-            text-align: left;
-            /* 8px - 12px */
-            margin-bottom: clamp(0.5rem, 1.4vw, 0.75rem);
+            display: flex;
+            flex-direction: column;
+            /* centers content horizontally, set to flex-start to left align */
+            align-items: center;
         }
 
         .cs-title {
-            text-align: left;
-            max-width: calc(800 / 16 * 1rem);
+            margin: 0;
         }
 
-        .cs-text {
-            text-align: left;
-            /* 404px - 522px */
-            max-width: clamp(25.25rem, 30vw, 32.625rem);
-            margin: 0 auto 0 0;
-            /* 40px - 48px */
-            margin-bottom: clamp(2.5rem, 6.3vw, 3rem);
+        .cs-form {
+            width: 100%;
+            max-width: calc(846 / 16 * 1rem);
+            display: grid;
+            grid-template-columns: repeat(12, 1fr);
+            gap: calc(12 / 16 * 1rem);
         }
 
-        #cs-form {
-            margin-bottom: calc(40 / 16 * 1rem);
-            label {
-                font-size: calc(16 / 16 * 1rem);
-                font-weight: 700;
-                line-height: 1.5em;
-                /* 12px - 20px */
-                margin-bottom: clamp(0.75rem, 1.3em, 1.25rem);
-                color: var(--headerColor);
-                display: flex;
-                flex-direction: column;
-                justify-content: center;
-                align-items: flex-start;
-            }
-
-            .cs-label-message {
-                /* 32px - 48px */
-                margin-bottom: clamp(2rem, 6.3vw, 3rem);
-            }
-
-            input,
-            textarea {
-                font-size: calc(16 / 16 * 1rem);
-                width: 100%;
-                height: calc(64 / 16 * 1rem);
-                margin-top: calc(4 / 16 * 1rem);
-                /* prevents border & padding from affecting height */
-                box-sizing: border-box;
-                padding-left: calc(20 / 16 * 1rem);
-                border: 1px solid #b4b2c7;
-                border-radius: calc(8 / 16 * 1rem);
-                transition: border 0.3s;
-
-                &:hover {
-                    border: 1px solid var(--primary);
-                }
-            }
-
-            textarea {
-                font-family: inherit;
-                min-height: calc(120 / 16 * 1rem);
-                padding-top: calc(20 / 16 * 1rem);
-            }
-
-            .cs-button-solid {
-                width: 100%;
-                border: none;
-            }
-        }
-
-        .cs-right-section {
-            height: calc(320 / 16 * 1rem);
-            /* 24px - 40px top & bottom */
-            /* 20px - 40px left & right */
-            padding: clamp(1.5rem, 3vw, 2.5rem) clamp(1.25rem, 3vw, 2.5rem);
-            border-radius: calc(8 / 16 * 1rem);
+        .cs-label {
+            /* 14px - 16px */
+            font-size: clamp(0.875rem, 1.5vw, 1rem);
+            width: 100%;
+            color: var(--headerColor);
             display: flex;
             flex-direction: column;
-            justify-content: flex-end;
+            justify-content: center;
             align-items: flex-start;
-            position: relative;
-            /* cuts off corners on img tag */
-            overflow: hidden;
+            grid-column: span 12;
+            gap: calc(4 / 16 * 1rem);
         }
 
-        .cs-header {
-            /* 16px - 20px */
-            font-size: clamp(1rem, 3vw, 1.25rem);
-            font-weight: 700;
-            line-height: 1.2em;
-            margin-bottom: calc(8 / 16 * 1rem);
-            color: var(--bodyTextColorWhite);
-            display: block;
+        .cs-input, .cs-select {
+            font-size: calc(16 / 16 * 1rem);
+            width: 100%;
+            height: calc(56 / 16 * 1rem);
+            padding: 0;
+            padding: 0 calc(24 / 16 * 1rem);
+            color: var(--headerColor);
+        
+            background-color: #fff;
+            border-color:#000;
+            /* prevents padding from adding to height and width */
+            box-sizing: border-box;
+            transition: border-color 0.3s;
+            &:hover {
+                border-color: var(--secondary);
+            }
+            &:focus {
+                outline: 1px solid var(--secondary);
+            }
+            &::placeholder {
+                color: #7d799c;
+                opacity: 0.6;
+            }
         }
 
-        .cs-link {
-            /* 16px - 20px */
-            font-size: clamp(1rem, 3vw, 1.25rem);
-            line-height: 1.2em;
+        .cs-textarea {
+            /* 120px - 192px */
+            min-height: clamp(7.5rem, 28vw, 12rem);
+            padding-top: calc(24 / 16 * 1rem);
+            /* 48px - 64px */
+            margin-bottom: clamp(3rem, 6vw, 4rem);
+            font-family: inherit;
+        }
+
+        .cs-button-solid {
+            font-size: calc(16 / 16 * 1rem);
+            /* 46px - 56px */
+            line-height: clamp(2.875rem, 3.5vw, 3.5rem);
             text-decoration: none;
-            margin-bottom: calc(20 / 16 * 1rem);
-            color: var(--bodyTextColorWhite);
-            display: block;
+            font-weight: 700;
+            text-align: center;
+            margin: 0 auto;
+            color: #fff;
+            min-width: calc(150 / 16 * 1rem);
+            padding: 0 calc(24 / 16 * 1rem);
+            background-color: var(--primary);
+            border-radius: calc(50 / 16 * 1rem);
+            overflow: hidden;
+            display: inline-block;
             position: relative;
+            z-index: 1;
+            /* prevents padding from adding to the width */
+            box-sizing: border-box;
 
             &:before {
-                /* Animated underline */
                 content: "";
-                width: 0%;
-                height: 2px;
-                /* current color of the parent */
-                background: currentColor;
-                opacity: 1;
-                display: block;
                 position: absolute;
-                bottom: calc(-2 / 16 * 1rem);
+                height: 100%;
+                width: 0%;
+                background: #000;
+                opacity: 1;
+                top: 0;
                 left: 0;
+                z-index: -1;
+                border-radius: calc(4 / 16 * 1rem);
                 transition: width 0.3s;
             }
 
@@ -157,169 +133,86 @@
                     width: 100%;
                 }
             }
+        }
 
-            &:last-of-type {
-                margin-bottom: 0;
+        .cs-submit {
+            text-transform: uppercase;
+            min-width: calc(214 / 16 * 1rem);
+            margin-top: calc(-12 / 16 * 1rem);
+            border: none;
+            grid-column: span 12;
+
+            &:hover {
+                cursor: pointer;
             }
         }
 
-        .cs-block {
-            /* sends second address line to the bottom on its own line */
-            display: block;
+        .cs-floater1 {
+            /* 157px - 312px */
+            width: clamp(9.8125rem, 20vw, 19.5rem);
+            height: auto;
+            position: absolute;
+            top: calc(-32 / 16 * 1rem);
+            left: calc(-64 / 16 * 1rem);
+            z-index: -1;
+            transform: rotate(-10deg);
         }
 
-        .cs-bg-picture {
+        .cs-floater2 {
+            /* 72px - 200px */
+            width: clamp(4.5rem, 15vw, 12.5rem);
+            height: auto;
+            position: absolute;
+            bottom: calc(200 / 16 * 1rem);
+            right: calc(-44 / 16 * 1rem);
+            z-index: -1;
+            transform: rotate(-10deg);
+        }
+
+        .cs-background {
             width: 100%;
             height: 100%;
             display: block;
             position: absolute;
             top: 0;
             left: 0;
-            z-index: -1;
-            transition: transform 0.6s;
-
-            &:before {
-                /* background color overlay */
-                content: "";
-                width: 100%;
-                height: 100%;
-                background: linear-gradient(
-                    180deg,
-                    rgba(0, 0, 0, 0) 0%,
-                    rgba(0, 0, 0, 0.8) 100%
-                );
-                display: block;
-                position: absolute;
-                top: 0;
-                left: 0;
-                z-index: 1;
-            }
+            z-index: -2;
 
             img {
-                width: 100%;
-                height: 100%;
-                /* Makes img tag act as a background image */
-                object-fit: cover;
                 position: absolute;
                 top: 0;
                 left: 0;
-            }
-        }
-    }
-}
-
-/* Tablet - 700px */
-@media only screen and (min-width: 43.75em) {
-    #cs-contact {
-        #cs-form {
-            display: flex;
-            justify-content: space-between;
-            align-items: flex-start;
-            flex-wrap: wrap;
-
-            label {
-                width: 48%;
-            }
-
-            .cs-label-message {
+                height: 100%;
                 width: 100%;
+                /* Makes img tag act as a background image */
+                object-fit: cover;
             }
         }
     }
 }
 
-/* Small Desktop - 1024px */
-@media only screen and (min-width: 64em) {
-    #cs-contact {
-        .cs-container {
-            max-width: calc(1280 / 16 * 1rem);
-            display: flex;
-            justify-content: flex-end;
-            align-items: flex-start;
-            gap: calc(80 / 16 * 1rem);
+/* Tablet - 768px */
+@media only screen and (min-width: 48rem) {
+    #contact-1525 {
+        padding: var(--sectionPadding);
+        position: relative;
+
+        .cs-label {
+            grid-column: span 6;
         }
 
-        #cs-form {
-            max-width: calc(630 / 16 * 1rem);
-            label {
-                width: 100%;
-            }
-        }
-
-        .cs-right-section {
-            width: 40%;
-            max-width: calc(542 / 16 * 1rem);
-            /* changes to 578px at 1300px wide */
-            height: calc(686 / 16 * 1rem);
-            /* prevents flexbox from squishing it */
-            flex: none;
-
-            &:hover {
-                .cs-bg-picture {
-                    transform: scale(1.1);
-                }
-            }
-        }
-
-        .cs-block {
-            /* goes back to inline so it stays "in line" with the rest of the text */
-            display: inline-block;
+        .cs-message {
+            grid-column: span 12;
         }
     }
 }
 
-/* Small Desktop - 1300px */
-@media only screen and (min-width: 81.25em) {
-    #cs-contact {
-        #cs-form {
-            column-gap: calc(0 / 16 * 1rem);
-            label {
-                width: 48%;
-                max-width: calc(305 / 16 * 1rem);
-            }
-
-            .cs-label-message {
-                max-width: 100%;
-            }
-        }
-
-        .cs-right-section {
-            height: calc(578 / 16 * 1rem);
+/* Large Desktop - 1300px */
+@media only screen and (min-width: 81.25rem) {
+    #contact-1525 {
+        .cs-floater1 {
+            top: calc(180 / 16 * 1rem);
         }
     }
 }
-
-/* Dark Mode */
-@media only screen and (min-width: 0em) {
-    body.dark-mode {
-        #cs-contact {
-            .cs-text,
-            .cs-title {
-                color: var(--bodyTextColorWhite);
-            }
-
-            #cs-form {
-                label,
-                input,
-                textarea {
-                    color: var(--bodyTextColorWhite);
-                    background-color: transparent;
-
-                    &::placeholder {
-                        /* lighten up the color of the text by 40%*/
-                        filter: brightness(1.4);
-                    }
-                }
-            }
-
-            .cs-bg-picture {
-                background-color: #000;
-
-                img {
-                    /* lets parent background-color bleed through and darken it */
-                    opacity: 0.5;
-                }
-            }
-        }
-    }
-}
+                                
