--- a/src/_includes/components/cta.html
+++ b/src/_includes/components/cta.html
@@ -6,7 +6,7 @@
     <div class="cs-container">
         <div class="cs-content">
             <span class="cs-topper">Feel Free to Write Us Anytime</span>
-            <h2 class="cs-title">Let us know any questions or request a quote”</h2>
+            <h2 class="cs-title">Let us know any questions or request a quote</h2>
         </div>
         <!--Form-->
         <form class="cs-form" id="cs-form-1525" name="Contact Form" method="post">
