--- a/src/assets/css/root.css
+++ b/src/assets/css/root.css
@@ -890,7 +890,7 @@ html {
     /* prevents padding from affectin gheight */
     box-sizing: border-box;
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
     align-items: center;
     gap: 1.5rem;
     position: relative;
