--- a/src/assets/css/local.css
+++ b/src/assets/css/local.css
@@ -632,8 +632,8 @@
     color: var(--bodyTextColorWhite);
   }
   #meet-team-1141 .cs-picture {
-    width: 100%;
-    height: auto;
+    width: 50%;
+    height: 50%;
     margin: 0 0 0.5rem 0;
     /* removed at tablet */
     aspect-ratio: 328/407;
@@ -702,6 +702,33 @@
   #meet-team-1141 .cs-item {
     width: 100%;
   }
+  #meet-team-1141 .cs-picture {
+    width: 75%;
+    height: 75%;
+    margin: 0 0 0.5rem 0;
+    /* removed at tablet */
+    aspect-ratio: 328/407;
+    border-radius: 1rem;
+    /* clips the img corners */
+    overflow: hidden;
+    /* clips img tag from overflowing it on hover */
+    overflow: hidden;
+    display: block;
+    position: relative;
+    z-index: 1;
+  }
+  #meet-team-1141 .cs-picture img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    /* makes sure the top of the image is at the top of the parent, heads won't get cut off this way */
+    object-position: top;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    transition: transform 0.7s;
+  }
 }
 /* Small Desktop - 1024px */
 @media only screen and (min-width: 56.25rem) {
@@ -723,6 +750,37 @@
   #meet-team-1141 .cs-item {
     width: 100%;
   }
+}
+.cs-button-1 {
+  font-size: 1rem;
+  /* 46px - 56px */
+  line-height: clamp(2.875rem, 8vw, 3.5rem);
+  text-decoration: none;
+  font-weight: 700;
+  margin: auto;
+  color: #fff;
+  padding: 0 1.5rem;
+  background-color: var(--primary);
+  display: inline-block;
+  position: relative;
+  z-index: 1;
+}
+.cs-button-1:hover:before {
+  width: 100%;
+}
+.cs-button-1:before {
+  /* hover box */
+  content: "";
+  position: absolute;
+  display: block;
+  height: 100%;
+  width: 0%;
+  background: #000;
+  opacity: 1;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  transition: width 0.3s;
 }
 
 /*# sourceMappingURL=local.css.map */
